# Akagi-NG

./: .gitignore  README.md  README.txt  README_ZH.md
.github/: dependabot.yml
akagi_backend/: .codecov.yml  akagi-ng.spec  pyproject.toml
akagi_backend/akagi_ng/: __init__.py  __main__.py  application.py
akagi_backend/akagi_ng/autoplay/: __init__.py  browser.py  positions.py  service.py
akagi_backend/akagi_ng/bridge/: __init__.py  base.py  logger.py  types.py
akagi_backend/akagi_ng/bridge/amatsuki/: __init__.py  bridge.py  consts.py
akagi_backend/akagi_ng/bridge/majsoul/: __init__.py  bridge.py  consts.py  liqi.py  tile_mapping.py
akagi_backend/akagi_ng/bridge/riichi_city/: __init__.py  bridge.py  consts.py
akagi_backend/akagi_ng/bridge/tenhou/: __init__.py  bridge.py  consts.py
akagi_backend/akagi_ng/bridge/tenhou/utils/: converter.py  decoder.py  judrdy.py  judwin.py  state.py
akagi_backend/akagi_ng/core/: __init__.py  constants.py  context.py  lib_loader.py  logging.py  notification_codes.py  notification_handler.py  paths.py
akagi_backend/akagi_ng/dataserver/: __init__.py  adapter.py  api.py  dataserver.py  logger.py  sse.py
akagi_backend/akagi_ng/electron_client/: __init__.py  base.py  logger.py  majsoul.py  tenhou.py
akagi_backend/akagi_ng/mitm_client/: __init__.py  bridge_addon.py  client.py  logger.py
akagi_backend/akagi_ng/mjai_bot/: __init__.py  bot.py  controller.py  logger.py  network.py  protocols.py  utils.py
akagi_backend/akagi_ng/mjai_bot/engine/: __init__.py  akagi_ot.py  base.py  factory.py  mortal.py  provider.py
akagi_backend/akagi_ng/mjai_bot/mortal/: __init__.py  base.py  bot.py  logger.py  model.py
akagi_backend/akagi_ng/settings/: __init__.py  logger.py  settings.py
akagi_backend/scripts/: build_backend.py  liqi_tools.py
akagi_backend/tests/: conftest.py  test_autoplay_positions.py
akagi_backend/tests/integration/: __init__.py  conftest.py  test_amatsuki_integration.py  test_application_integration.py  test_controller_integration.py  test_dataserver_integration.py  test_engine_provider_integration.py  test_majsoul_electron_client_integration.py  test_majsoul_integration.py  test_mitm_client_integration.py  test_nukidora_integration.py  test_riichi_city_integration.py  test_shutdown_api.py  test_tenhou_electron_client_integration.py  test_tenhou_integration.py
akagi_backend/tests/unit/: __init__.py  test_akagi_ot_circuit_breaker.py  test_application.py  test_bots.py  test_bridge_amatsuki.py  test_bridge_majsoul.py  test_bridge_majsoul_hand.py  test_bridge_riichi_city.py  test_bridge_tenhou.py  test_controller_bot_switch.py  test_dataserver_adapter.py  test_dataserver_api.py  test_dataserver_lifecycle.py  test_electron_client.py  test_engine_factory.py  test_frontend_adapter_fallback.py  test_frontend_adapter_filter.py  test_liqi.py  test_majsoul_liqi.py  test_majsoul_sync_and_reconnect.py  test_mitm_bridge_addon.py  test_mjai_bot_controller.py  test_mjai_bot_network.py  test_mortal_bot_decision.py  test_mortal_bot_edge_cases.py  test_mortal_engine.py  test_notification_handler.py  test_riichi_lookahead.py  test_settings.py  test_sse.py  test_state_tracker_bot.py  test_utils.py
akagi_frontend/: .prettierignore  .prettierrc  build.ts  eslint.config.js  index.html  mock.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
assets/: file_version_info.txt  liqi.json  settings.schema.json  (+1 more)
(+89 files in other folders)
